tests/test1.c
#include <stdio.h>

int main() {
	int x;
	int y;

	x = 5;
	y = 6;

    printf("%d\n", x + y);
    printf("%d\n", x);
    printf("%d\n", y);

    x = y;

    printf("%d\n", x);
    printf("%d\n", y);
    printf("%d\n", 1 + 2 * 5 + k);
}